--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "react脚手架，内置 react-router, react-sage, axios ...",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "rollup -c -w",
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wgm7512/yasuo.git"
   },
+  "files": [
+    "./bin",
+    "./dist"
+  ],
   "bin": {
-    "yasuo-cli": "./bin/bin.js",
     "ys-cli": "./bin/bin.js",
-    "yasou": "./bin/bin.js",
     "ys": "./bin/bin.js"
   },
   "keywords": [
@@ -36,7 +39,6 @@
     "inquirer": "^8.2.0",
     "log-symbols": "^5.0.0",
     "ora": "^6.0.1",
-    "typescript": "^4.4.4",
     "typescript-loader": "^1.1.3",
     "webpack": "^5.62.1",
     "webpack-cli": "^4.9.1",
@@ -44,11 +46,17 @@
     "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
+    "@types/node": "^16.11.7",
     "rollup": "^2.59.0",
-    "rollup-plugin-clear": "^2.0.7"
+    "rollup-plugin-clear": "^2.0.7",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "ts-node": "^10.4.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.4"
   }
 }
