--- a/package.json
+++ b/package.json
@@ -56,8 +56,9 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@types/node": "^16.11.7",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "eslint": "^8.2.0",
     "rollup": "^2.59.0",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-eslint": "^7.0.0",
