--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "rollup": "^2.59.0",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-eslint": "^7.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
