--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "react脚手架，内置 react-router, react-sage, axios ...",
   "main": "index.js",
   "scripts": {
-    "start": "rollup -c -w",
-    "build": "rollup -c",
+    "start": "npm run build -- --watch",
+    "build": "babel src -d dist --extensions \".ts,.js\"",
     "lint": "eslint --ext .ts src"
   },
   "repository": {
@@ -42,7 +42,6 @@
     "html-webpack-plugin": "^5.5.0",
     "inquirer": "^8.2.0",
     "log-symbols": "^5.0.0",
-    "ora": "^6.0.1",
     "typescript-loader": "^1.1.3",
     "webpack": "^5.62.1",
     "webpack-cli": "^4.9.1",
@@ -50,22 +49,15 @@
     "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.0.6",
     "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "eslint": "^8.2.0",
-    "rollup": "^2.59.0",
-    "rollup-plugin-clear": "^2.0.7",
-    "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "ts-node": "^10.4.0",
+    "ora": "^6.0.1",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4"
   }
