--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "html-webpack-plugin": "^5.5.0",
     "inquirer": "^8.2.0",
     "log-symbols": "^5.0.0",
+    "ora": "^4.0.3",
     "typescript-loader": "^1.1.3",
     "webpack": "^5.62.1",
     "webpack-cli": "^4.9.1",
@@ -57,7 +58,7 @@
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "eslint": "^8.2.0",
-    "ora": "^6.0.1",
+    "rimraf": "^3.0.2",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4"
   }
