--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build -- --watch",
-    "build": "babel src -d dist --extensions \".ts,.js\"",
+    "build": "babel src -d dist --extensions .ts,.js",
     "lint": "eslint --ext .ts src"
   },
   "repository": {
